cluster/namespaces.ambient.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint-cluster
    istio.io/ingress-use-waypoint: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint-observability
    istio.io/ingress-use-waypoint: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint-service
    istio.io/ingress-use-waypoint: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: kagent
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint-kagent
    istio.io/ingress-use-waypoint: "true"
