cluster/namespaces.sidecar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: kagent
  labels:
    istio-injection: enabled
