cluster/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
---
apiVersion: v1
kind: Namespace
metadata:
  name: service
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
