cluster/api-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: cluster
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-api-anyflow-net
        protocol: HTTPS
      hosts:
        - api.anyflow.net
      tls:
        mode: SIMPLE
        credentialName: api-anyflow-net-tls
