cluster/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: cluster
  labels:
    app: gateway
    version: latest
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.anyflow.net"
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: gateway
#   namespace: cluster
#   labels:
#     app: gateway
#     version: latest
# spec:
#   gatewayClassName: istio
#   addresses:
#     - type: IPAddress
#       value: 172.18.255.200
#   listeners:
#     - name: http-anyflow-net
#       hostname: "*.anyflow.net"
#       port: 80
#       protocol: HTTP
#       allowedRoutes:
#         namespaces:
#           from: All
#     - name: https-anyflow-net
#       hostname: "*.anyflow.net"
#       port: 443
#       protocol: HTTPS
#       allowedRoutes:
#         namespaces:
#           from: All
#       tls:
#         mode: Terminate
#         certificateRefs:
#           - kind: Secret
#             name: default-tls
#             namespace: cluster
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: gateway
#   namespace: cluster
#   labels:
#     app: gateway
#     version: latest
#   annotations:
#     service.beta.kubernetes.io/load-balancer-ip: "172.18.255.200"
# spec:
#   selector:
#     app: gateway
#     version: latest
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: HTTP
#       hosts:
#         - "*.anyflow.net"
#     - port:
#         number: 443
#         name: https
#         protocol: HTTPS
#       hosts:
#         - "*.anyflow.net"
#       tls:
#         mode: SIMPLE
#         credentialName: default-tls
# ---
# ---
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#   name: allow-all
#   namespace: cluster
# spec:
#   targetRefs:
#     - kind: Gateway
#       group: gateway.networking.k8s.io
#       name: gateway
#   action: ALLOW
#   rules:
#     - from:
#         - source:
#             principals: ["*"] # 모든 주체(사용자, 서비스 등) 허용
#       to:
#         - operation:
#             methods: ["*"] # 모든 HTTP 메서드 허용
#             paths: ["*"] # 모든 경로 허용
#       when: [] # 조건 없음 (모든 조건 허용)
# ---
# apiVersion: security.istio.io/v1beta1
# kind: PeerAuthentication
# metadata:
#   name: tls-mode
#   namespace: istio-system
# spec:
#   mtls:
#     mode: PERMISSIVE
