cluster/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: cluster
spec:
  gatewayClassName: istio
  addresses:
    - type: Hostname
      value: istio-ingressgateway.cluster.svc.cluster.local
  listeners:
    - name: http-api-anyflow-net
      hostname: api.anyflow.net
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-api-anyflow-net
      hostname: api.anyflow.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: api-anyflow-net-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http-kiali-anyflow-net
      hostname: kiali.anyflow.net
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-kiali-anyflow-net
      hostname: kiali.anyflow.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: kiali-anyflow-net-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http-prometheus-anyflow-net
      hostname: prometheus.anyflow.net
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-prometheus-anyflow-net
      hostname: prometheus.anyflow.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: prometheus-anyflow-net-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http-grafana-anyflow-net
      hostname: grafana.anyflow.net
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-grafana-anyflow-net
      hostname: grafana.anyflow.net
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: grafana-anyflow-net-tls
      allowedRoutes:
        namespaces:
          from: All
