cluster/waypoints.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint-cluster
  namespace: cluster
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: mesh
      port: 15008
      protocol: HBONE
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint-observability
  namespace: observability
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: mesh
      port: 15008
      protocol: HBONE
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint-service
  namespace: service
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: mesh
      port: 15008
      protocol: HBONE

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: waypoint-kagent
  namespace: kagent
  labels:
    istio.io/waypoint-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: mesh
      port: 15008
      protocol: HBONE
