cluster/serviceentry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-anyflow-net
spec:
  hosts:
    - "api.anyflow.net"
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
