cluster/traceparent_updater.yaml
# TODO: 코드는 정상 동작하나, 생성된 traceparent가 아닌 신규로 istio가 생성 중.
# TODO Lua가 아닌 WASM을 사용하여 HTTP Filter가 아닌 Listener Filter 등 앞단에서 처리해야할 수도

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: modify-trace-id
  namespace: cluster
spec:
  workloadSelector:
    labels:
      app: gateway
      version: latest

  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              # subFilter:
              #   name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inlineCode: |
              function random_id(prefix, size)
                if #prefix > size then
                  prefix = string.sub(prefix, 1, size)
                end

                local hexChars = "0123456789abcdef"
                local remainingSize = size - #prefix
                local randomString = prefix

                for i = 1, remainingSize do
                  local randomIndex = math.random(1, #hexChars)
                  randomString = randomString.. string.sub(hexChars, randomIndex, randomIndex)
                end

                return randomString
              end

              function envoy_on_request(request_handle)
                local headers = request_handle:headers()
                local x_message_id = headers:get("X-Message-Id")
                local traceparent = headers:get("Traceparent")

                if traceparent then
                  local version, _, parent_id, _ = traceparent:match("(%x%x)%-(%x+)%-(%x+)%-(%x+)")
                  traceparent = string.format("%s-%s-%s-%s", version, random_id(x_message_id and x_message_id or "", 32), parent_id, "01")

                  headers:replace("Traceparent", traceparent)
                else
                  traceparent = string.format("%s-%s-%s-%s", "00", random_id(x_message_id and x_message_id or "", 32), random_id("", 16), "01")
                  headers:replace("Traceparent", traceparent)
                end

                request_handle:logInfo("Traceparent: " .. headers:get("Traceparent"))
              end
